# SERVER/RISPOSTE/login.js
@@ -1,6 +1,7 @@
 import { z } from 'zod';
 import { connectToCluster } from './connect.js';
 import { createHash } from 'crypto';
+import { timeStamp } from 'console';
 
 function forgot(email){
     const userDataSchema = z.object({
@@ -30,22 +31,26 @@ async function login(userData){
 
         userData.data= new Date(userData.data);
         userDataSchema.parse(userData);
-        
+    try{ 
+        const client = await connectToCluster();
     try{
 
-        const client = await connectToCluster();
         const db = client.db("Uni");
         const col = db.collection("Utenti");
         const user = await col.findOne({"email": userData.email, "password": userData.password});
-        await client.close();
      
 
-        if(user == nul){
+        if(user == null){
             return {res:false , code:400};
         }
         
-        return {res: createHash('sha256').update(userData.email+userData.password).digest('base64'), code:200 , status:"ok"};
+        return {res: createHash('sha256').update(userData.email+userData.password+Date.now()).digest('base64'), code:200 , status:"ok"};
     }catch (error) {
+            console.error(error);
+            return {res:false , code:500};
+        }finally{
+            await client.close();
+        }}catch (error) {
             console.error(error);
             return {res:false , code:500};
         }
